--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#wrapper {
+  padding: 20px;
+  width: 60%;
+  display: block;
+  margin: 100px auto 100px auto;
+  background-color: #fff;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ccc;
+  height: auto;
+  position: relative;
+  overflow: auto;
+}
